[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AA-Opto-Electronic-MPDSnCxx-Interface"
version = "1.0.1"
description = """Python package for USB interfacing of the AA Opto-Electronic MPDSnCxx Radio Frequency Driver"""
authors = [
    {name = "Edward Appleton", email = "edwardisaaca@gmail.com"}
]
maintainers = [
    {name = "Edward Appleton", email = "edwardisaaca@gmail.com"}
]
license = "MIT"
license-files = ["*LICENSE*"]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "pyserial>=3.5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

[project.urls]
"Homepage" = "https://github.com/the-professor510/AA-Opto-Electronic-MPDSnCxx-Interface"